# AQML4MSC

./: .gitignore  README.md  main.py  pyproject.toml
aqml4msc/: data.py  logging.py  metrics.py  pipeline.py  utils.py
aqml4msc/datasets/: base_dataset.py  mnist.py
aqml4msc/experiments/: ansatz_search.py  baseline_hpo.py  manual_exp.py  quantum_hpo.py  test.py
aqml4msc/models/: base_mlp_model.py  vqa.py
aqml4msc/training/: base_training.py  mlp_training.py  svm_training.py
scripts/: metrics_to_tex.py  qmetrics_plot.py  show_photo_processing.py
scripts/experiments/qml4msc/: ansatz_search.py  baseline_hpo.py  manual_exp.py  quantum_hpo.py  test.py
scripts/utility/: docker_run.sh  metrics_to_tex.py  run_with_mlflow.sh  start_mlflow_server.sh  test.py
src/: data_loading.py  logging_utils.py  pipeline.py  utils.py
src/aqml4msc/experiments/: ansatz_search.py  baseline_hpo.py  manual_exp.py
src/aqml4msc/logging/: mlflow_utils.py
src/aqml4msc/metrics/: core.py
src/aqml4msc/models/: base_mlp_model.py  classical_mlp.py  sample_mpl.py  vqa.py
src/aqml4msc/pipeline/: pipeline.py
src/aqml4msc/preprocessing/: transforms.py
src/aqml4msc/training/: mlp_training.py  (+1 more)
src/experiments/: manual_exp.py
src/models/: sample_mpl.py  vqa.py
src/training/: base_training.py  mlp_training.py  svm_training.py
txt/: Best_params_classical_1.txt  Best_params_classical_2.txt  detailed_tables.txt  parameter_count.txt
txt/Proceedings/: samplepaper.aux  samplepaper.fdb_latexmk  samplepaper.fls  samplepaper.tex
txt/iccs/: aqml4msc.bib  aqml4msc.blg  aqml4msc.tex  bibliography.bib  parameter_count.txt  reviews.txt  reviews_reply.txt
txt/misc/: .$NN+QNN_v2.drawio.bkp  Data_Fusion.drawio  Decision_Fusion.drawio  Feature_Fusion.drawio  NN+QNN.drawio  NN+QNN_v2.drawio  NN.drawio  NN_multisource_plain.drawio  QNN.drawio
(+30 files in other folders)
