[project]
name = "aqml4msc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.7.0",
    "numpy>=2.3.5",
    "pennylane>=0.43.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
]
