[project]
name = "aqml4msc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.23",
    "lightning>=2.6.0",
    "matplotlib>=3.10.8",
    "mlflow==3.8.1",
    "numpy>=2.3.5",
    "optuna>=4.6.0",
    "pennylane>=0.43.1",
    "psycopg>=3.3.2",
    "psycopg2-binary>=2.9.11",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
